About page updated, profile updated

--- a/about.html
+++ b/about.html
@@ -39,13 +39,53 @@ layout: default
             <a href="mailto:kdh@i2sec.co.kr">김동현</a></span>
             <span class="sns">
               <a class="facebook-icon" href="https://www.facebook.com/hackpupu"></a>
+              <a class="instagram-icon" href="https://www.instagram.com/ben._.hyun/"></a>
               <a class="twitter-icon" href="https://www.twitter.com/hackpupu"></a>
               <a class="homepage-icon" href="https://hackpupu.github.io"></a>
             </span>
-            <p class="descrption">i2sec 내부 기술 발전을 위해 항상 노력하고 있습니다. 최근 관심사는 Deep Learning입니다.</p>
+            <p class="descrption">i2sec 내부 기술 발전을 위해 항상 노력하고 있습니다. <br>
+            최근 관심사는 Deep Learning입니다.</p>
           </div>
       </div>
 
+      <div class="author">
+        <img class="author-picture" src="/images/profile/abc@i2sec.co.kr.png" alt="abc@i2sec.co.kr" />
+        <div class="author-info">
+          <span class="nick-name">
+            <a href="mailto:abc@i2sec.co.kr">문경곤</a></span>
+            <span class="sns">
+              <a class="facebook-icon" href="https://www.facebook.com/kyounggon.mun"></a>
+            </span>
+            <p class="descrption">소개글이 없습니다.
+            </p>
+          </div>
+      </div>
+
+      <div class="author">
+        <img class="author-picture" src="/images/profile/asdf@i2sec.co.kr.png" alt="asdf@i2sec.co.kr" />
+        <div class="author-info">
+          <span class="nick-name">
+            <a href="mailto:asdf@i2sec.co.kr">박용운</a></span>
+            <span class="sns">
+            </span>
+            <p class="descrption">소개글이 없습니다.
+            </p>
+          </div>
+      </div>
+
+      <div class="author">
+        <img class="author-picture" src="/images/profile/lcy@i2sec.co.kr.png" alt="lcy@i2sec.co.kr" />
+        <div class="author-info">
+          <span class="nick-name">
+            <a href="mailto:lcy@i2sec.co.kr">이창영</a></span>
+            <span class="sns">
+              <a class="facebook-icon" href="https://www.facebook.com/changyoung.lee"></a>
+              <a class="instagram-icon" href="https://www.instagram.com/chang0e/"></a>
+            </span>
+            <p class="descrption">소개글이 없습니다.
+            </p>
+          </div>
+      </div>
 
    </div>
   </div>
