--- a/about.html
+++ b/about.html
@@ -49,6 +49,20 @@ layout: default
       </div>
 
       <div class="author">
+        <img class="author-picture" src="/images/profile/lcy@i2sec.co.kr.png" alt="lcy@i2sec.co.kr" />
+        <div class="author-info">
+          <span class="nick-name">
+            <a href="mailto:lcy@i2sec.co.kr">이창영</a></span>
+            <span class="sns">
+              <a class="facebook-icon" href="https://www.facebook.com/changyoung.lee"></a>
+              <a class="instagram-icon" href="https://www.instagram.com/chang0e/"></a>
+            </span>
+            <p class="descrption">자신의 자아정체성을 찾는 중...
+            </p>
+          </div>
+      </div>
+
+      <div class="author">
         <img class="author-picture" src="/images/profile/abc@i2sec.co.kr.png" alt="abc@i2sec.co.kr" />
         <div class="author-info">
           <span class="nick-name">
@@ -67,20 +81,6 @@ layout: default
           <span class="nick-name">
             <a href="mailto:asdf@i2sec.co.kr">박용운</a></span>
             <span class="sns">
-            </span>
-            <p class="descrption">소개글이 없습니다.
-            </p>
-          </div>
-      </div>
-
-      <div class="author">
-        <img class="author-picture" src="/images/profile/lcy@i2sec.co.kr.png" alt="lcy@i2sec.co.kr" />
-        <div class="author-info">
-          <span class="nick-name">
-            <a href="mailto:lcy@i2sec.co.kr">이창영</a></span>
-            <span class="sns">
-              <a class="facebook-icon" href="https://www.facebook.com/changyoung.lee"></a>
-              <a class="instagram-icon" href="https://www.instagram.com/chang0e/"></a>
             </span>
             <p class="descrption">소개글이 없습니다.
             </p>
