--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ layout: default
             <span class="sns">
               <a class="facebook-icon" href="https://www.facebook.com/kyounggon.mun"></a>
             </span>
-            <p class="descrption">소개글이 없습니다.
+            <p class="descrption">어드벤쳐형 일꾼<br>맨몸으로 정글에서 살아남는 인생을 사는 중
             </p>
           </div>
       </div>
