--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ layout: default
 
     </div>
 
-    <h2 class="author-title">i2sec Researcher</h2>
+    <h2 class="author-title">i2sec MEMBER</h2>
     <div class="member-info">
 
       <div class="author">
