Paul profile updated

--- a/about.html
+++ b/about.html
@@ -81,8 +81,9 @@ layout: default
           <span class="nick-name">
             <a href="mailto:asdf@i2sec.co.kr">박용운</a></span>
             <span class="sns">
+              <a class="instagram-icon" href="https://www.instagram.com/pyw1414/"></a>
             </span>
-            <p class="descrption">소개글이 없습니다.
+            <p class="descrption">해킹은 곧 상식이 되는날까지 달리자. 최근관심사는 범용적인 해킹과 보안입니다.
             </p>
           </div>
       </div>
